# rose

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  other_approaches.ipynb  pyproject.toml
.github/workflows/: tests.yml
docs/: settings.json
docs/approaches/: results.csv  results.parquet  summary.csv  summary.html  summary.parquet
docs/approaches/deepset/: results.csv  results.parquet
docs/approaches/fcnn/: results.csv  results.parquet
docs/approaches/gam/: results.csv  results.parquet
docs/approaches/gb_tree/: results.csv  results.parquet
docs/approaches/lr/: results.csv  results.parquet
docs/approaches/lr_bincount/: results.csv  results.parquet
docs/approaches/lr_categorical_features/: results.csv  results.parquet
docs/images/: photo-1617527019968-052733f9cfe8.avif
images/: photo-1603290989063-b255b11b2525.avif
notebooks/: GPU Device Check.ipynb  Petal DeepSet Animation.ipynb  Petal Linear Counts.ipynb  Petal Linear Odd Feature.ipynb  Petal Tree.ipynb  Petals Around the Rose.ipynb  Petals Concept Learning.ipynb  Petals DeepSet.ipynb  Petals Exact Methods.ipynb  Petals Optuna NN-Backup.ipynb  Petals Optuna NN.ipynb  Petals Optuna Tree.ipynb  Rose EDA.ipynb  Summarize Approaches.ipynb  concept_learning.ipynb  deepset_animation.ipynb  eda.ipynb  exact_methods.ipynb  gpu_device_check.ipynb  optuna_nn.ipynb  summary_plot.ipynb  tree.ipynb
src/: rose.py
src/rose/: __init__.py  data.py  evaluation.py  optimize.py  typing.py  viz.py
src/rose/approach/: __init__.py  base.py  numpy.py  pygam.py  sklearn.py  torch.py
src/rose/templates/: summary.html
templates/: summary.html
templates/.ipynb_checkpoints/: summary-checkpoint.html
tests/: test_smoke.py
