[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rose"
version = "0.1.0"
description = "Petals Around the Rose with ML"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "numpy~=2.4.0",
    "pandas~=3.0.0",
    "scikit-learn~=1.8.0",
    "torch~=2.12.0",
    "pygam~=0.12.0",
    "matplotlib~=3.10.0",
    "optuna~=4.8.0",
    "plotly~=6.7.0",
    "ipywidgets~=8.1.0",
    "nbformat>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov>=7.0.0",
    "ruff",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
rose = ["templates/*.html"]


[tool.ruff]
target-version = "py314"
fix = true
src = ["src", "tests"]


[tool.ruff.lint]
select = [
    "E",   # PEP 8
    "F",   # Pyflakes
    "I",   # import sort
    "B",   # bugbear
    "UP",  # PyUpgrade
    "TRY", # Tryceratopsimport math
]
ignore = [
    "E501",   # line length
    "TRY003", # long exception messages
    "TRY300", # return outside of else
    "B905",   # explicit strict in zip()
]

[tool.pytest.ini_options]
addopts = "--cov=src/jellyjoin --cov-report=term-missing"
testpaths = ["tests"]
